cleaned up AddOrEditShoot; fixed alignment of button-container

--- a/src/pages/AddOrEditShoot/AddOrEditShoot.scss
+++ b/src/pages/AddOrEditShoot/AddOrEditShoot.scss
@@ -224,6 +224,7 @@
     flex-direction: column;
     gap: 1rem;
     max-width: 1000px;
+    min-width: 100%;
     padding-block: 2rem;
 
     @media(min-width: $tablet) {
